Name:           Yogurt
Version:        0.1
Cabal-Version:  >= 1.2
License:        LGPL
Author:         Martijn van Steenbergen
Homepage:       http://martijn.van.steenbergen.nl/projects/yogurt/
Category:       Network
Synopsis:       A MUD client library for Haskell

Library
  Build-Depends:    base
  Exposed-modules:  Yogurt, Yogurt.Mud, Yogurt.Utils, Yogurt.Engine
